Correctly aligning the geolocation button again.

--- a/app/less/modules/geolocateButton.less
+++ b/app/less/modules/geolocateButton.less
@@ -18,7 +18,7 @@
     .geolocate-button__icon {
         font-size: 20px;
         left: -2px;
-        top: 0;
+        top: 3px;
     }
 }
 
